Fixes for text on mobile devices (08-02-2024)

--- a/main.css
+++ b/main.css
@@ -313,7 +313,7 @@ main{
     font-size: 20px;
     font-weight: 200;
     margin-bottom: 3rem;
-    text-align: justify;
+    text-align: right;
     text-justify: distribute-all-lines;
 }
 
@@ -1041,9 +1041,13 @@ form{
     }
 
     .home-text .text-h1{
-        font-size: 2rem;
+        font-size: 24px;
         line-height: 5rem;
         text-align: center;
+    }
+
+    .home-text p{
+        font-size: 18px;
     }
 
     .home-text .home-btn-container{
@@ -1070,7 +1074,7 @@ form{
     }
 
     .montessori-at-home .mah-content .mah-header-text h1{
-        font-size: 1.8rem;
+        font-size: 24px;
         text-align: center;
     }
 
@@ -1094,12 +1098,10 @@ form{
 
     .montessori-at-home .mah-content .mah-about-project .about-proj-content1 .content-section2{
         width: 100%;
-        padding: 2rem;
     }
 
     .montessori-at-home .mah-content .mah-about-project .about-proj-content2 .content-section2{
         width: 100%;
-        padding: 2rem;
     }
 
     .montessori-at-home .mah-content .mah-about-project .about-proj-content1 .content-section1 img,
@@ -1114,8 +1116,15 @@ form{
         padding: 0;
     }
 
+    .montessori-at-home .mah-content .mah-about-project .about-proj-content1 .content-section2 .section2-txt-container h1{
+        font-size: 24px;
+        text-align: left;
+    }
+
     .montessori-at-home .mah-content .mah-about-project .about-proj-content1 .content-section2 .section2-txt-container p{
-        font-size: 1.3rem;
+        font-size: 18px;
+        text-align: left;
+        text-indent: 0;
     }
 
     .montessori-at-home .mah-content .mah-about-project .about-proj-content2 .content-section2 .section2-txt-container{
@@ -1124,8 +1133,15 @@ form{
         padding: 0;
     }
 
+    .montessori-at-home .mah-content .mah-about-project .about-proj-content2 .content-section2 .section2-txt-container h1{
+        font-size: 24px;
+        text-align: left;
+    }
+
     .montessori-at-home .mah-content .mah-about-project .about-proj-content2 .content-section2 .section2-txt-container p{
-        font-size: 1.3rem;
+        font-size: 18px;
+        text-align: left;
+        text-indent: 0;
     }
 
     .montessori-at-home .mah-content .mah-about-project .about-proj-content2 .content-section2 .section2-txt-container h4{
@@ -1159,8 +1175,20 @@ form{
         margin: 10px 10px;
     }
 
+    .methodology-txt .methodology-title{
+        font-size: 24px;
+    }
+
+    .methodology-txt .methodology-h3{
+        font-size: 18px;
+        font-weight: 500;
+        font-style: italic;
+    }
+
     .methodology-txt p{
-        font-size: 1.2rem;
+        font-size: 18px;
+        text-align: left;
+        text-indent: 0;
         line-height: 2rem;
     }
 
@@ -1212,17 +1240,19 @@ form{
     .text-after-swiper{
         text-align: center;
         margin-bottom: 70px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
 
     .text-after-swiper h2{
-        font-size: 30px;
+        font-size: 24px;
         line-height: 40px;
         margin-bottom: 30px;
     }
 
     .text-after-swiper .subscribe-btn{
         font-size: 25px;
-        padding: 1.5rem 3rem;
+        padding: 1.5rem 2rem;
     }
 
     /* Seção About Me */
@@ -1236,8 +1266,15 @@ form{
         margin: 10px 10px;
     }
 
+    .aboutme-txt .aboutme-title{
+        font-size: 24px;
+        text-align: left;
+    }
+
     .aboutme-txt p{
-        font-size: 1.2rem;
+        font-size: 18px;
+        text-indent: 0;
+        text-align: left;
         margin-bottom: 20px;
         line-height: 2rem;
     }
